White space off canvas fix

--- a/css/search-nav.css
+++ b/css/search-nav.css
@@ -277,7 +277,8 @@ a {
   -webkit-transform: translateX(0);
   transform: translateX(0);
   -webkit-transition: .3s ease all;
-  transition: .3s ease all; }
+  transition: .3s ease all;
+  min-height: 800px; }
 
 .site-menu {
   z-index: 1;
