--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -51,6 +51,7 @@ a {
   transform: translateX(0);
   -webkit-transition: .3s ease all;
   transition: .3s ease all;
+  min-height: 800px;
 }
 .site-menu {
   z-index: 1;
